--- a/style.css
+++ b/style.css
@@ -3,3 +3,42 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align: center;
+}
+
+h1 {
+  color: red;
+}
+nav a{
+  padding-left:10px;
+  padding-right: 10px;
+  background-color: gray;
+}
+figcaption{
+  font-size: 15px;
+  text-align: center;
+}
+img{
+  display: block;
+  margin: auto;
+}
+#featured-property p
+{ width: 800px;
+  text-align: center;
+  margin: auto;
+}
+
+#details
+{
+  display: block;
+  text-align: center;
+  margin: auto;
+}
+#details div
+{
+ float: left;
+ background-color: red;
+ width:  25%;
+ bottom: 0;
+}
