--- a/style.css
+++ b/style.css
@@ -3,3 +3,32 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align: center;
+}
+img{
+  display: block;
+  margin: auto;
+}
+nav a{
+  padding: 0px 10px;
+  background-color: grey;
+}
+figcaption{
+  text-align: center;
+}
+#featured-property p{
+  width: 800px;
+  text-align: center;
+  margin: auto;
+}
+#details{
+  display: block;
+
+}
+#details div{
+background-color: red;
+  float: left;
+  text-align: center;
+  width: 25%;
+}
