--- a/style.css
+++ b/style.css
@@ -1,5 +1,31 @@
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  text-align: center;
+  
+}
+.align-center{
+  text-align: center;
+}
+
+figure > figcaption{
+  font-size: 12px;
+}
+nav >a {
+
+ padding: 10px 0px;
+ background-color: grey;
+}
+#featured-property p{
+  width: 800px;
+ 
+}
+#details{
+  display: block;
+}
+#details div{
+  float: left;
+  width: 25%;
+  background-color: lightcoral;
+
 }
