--- a/style.css
+++ b/style.css
@@ -3,3 +3,29 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align: center;
+}
+img{
+  margin: auto;
+}
+nav ~ a{
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: gray;
+}
+figcaption{
+  text-align: center;
+  font-size: 10px;
+}
+p#featured-property{
+  width: 800px;
+  text-align: center;
+}
+#details~div{
+  display: block;
+  float: left;
+  background-color: gray;
+  text-align: center;
+  width: 25%;
+}
