--- a/style.css
+++ b/style.css
@@ -3,3 +3,36 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
+img {
+  margin: auto 0 auto 0;
+}
+a {
+  padding: 10px;
+  background-color: grey;
+  text-align: center;
+}
+
+figcaption{
+  text-align: center;
+  font-size: 10px:
+}
+p {
+  text-align: center:
+  
+}
+#featured-property {
+  width: 800px;
+  text-align: center;
+}
+#details {
+  display: block;
+  float: left;
+}
+div {
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
