--- a/style.css
+++ b/style.css
@@ -3,3 +3,34 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align: center;
+}
+header nav a {
+  background-color: #bbbbbb;
+  padding:  0 10px;
+}
+header nav a.active {
+color: #551b8a;
+}
+#featured-property{
+   display: block;
+  text-align: center;
+}
+#featured-property figcaption{
+  font-size: .6em
+}
+#featured-property p{
+  margin: 0 300px;
+  text-align: center;
+}
+#details{
+  display: block;
+  margin: 30px 0px
+}
+#details div{
+  background-color: red;
+  text-align: center;
+  float: left;
+  width: 25%
+}
