--- a/style.css
+++ b/style.css
@@ -3,3 +3,46 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header h1 {
+  text-align: center;
+}
+
+nav {
+  text-align: center;
+}
+
+nav a {
+  background-color: #bbb;
+  padding: 0 10px;
+}
+
+#featured-property figure img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 16px;
+  width: 50%;
+}
+
+#featured-property figure figcaption {
+  text-align: center;
+}
+
+#featured-property p {
+  margin: auto;
+  width: 40%;
+  padding: 16px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+#details {
+  display: flex;
+  background-color: red;
+}
+
+#details div {
+  flex: 1;
+  text-align: center;
+}
